 /* $Id: changelog,v 1.784 2000-03-04 23:56:34 bird Exp $ */

 2000-03-04: Jeroen van den Horn <J.vandenHorn@fibre.a2000.nl>
        - GLUT32: Added logic to escape from optimizer bug in VACPP

 2000-03-04: knut st. osmundsen <knut.stange.osmundse@pmsc.no>
        - fastdep: Simple preprocessor. Commments and #if 0/1.
        - OPENGL: Corrected makefiles. using LD2 and LD2FLAGS. Many makefiles
                 Didn't concider the NODEBUGINFO macro causing daily builds
                 to become enormous. Daily build of 6MB is not good!.
        - include\pdwin32.v*.*:
                *Alternate linker tool, LD2. This is ilink for VAC.
                 (See src\kernel32\makefile for hints how to use it).
                *Synced configuration for the two VAC versions.

                 NOTE that NODEBUGINFO and DEBUGALL is handled within these
                 files. You don't have to test for them to set the correct
                 compiler and linker flags, this is allready done!

 2000-03-04: Sander van Leeuwen <sandervl@xs4all.nl>
	- INCLUDE\pdwin32.tools, pdwin.vac*
                   Added new build rules (conditional at this time)
                   For each dll a subdir bin\release & bin\debug is created
                   in which the object files of the release & build version
                   are saved.
        - INCLUDE\pdwin32.post
                   Common makefile rules to be included by all makefiles
	- USER32\KERNEL32: Switched to new build rules
	- WSOCK32: Fixed bug in setsockopt for SO_LINGER (options size wasn't
                   adjusted)
	- KERNEL32: Fixed shell dirs (now all created in odin\bin dir)
                    Partially fixed destruction of loaded dlls in ExitProcess
                    (TODO: dependencies are not yet right; needs new design)
		    Added check and fix for DosOpen (ERROR_TOO_MANY_OPEN_FILES)
                    to hmdevio.cpp
	- USER32: Pass on keyboard messages if dinput handler returns TRUE